adding some tests for page controller and creating users model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><%= title %></title>
-  <%= stylesheet_link_tag "main","screen" %>
+  <%= stylesheet_link_tag "main",:media => "screen" %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
