--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome</h1>
-<p>Welcome to Small Ad, the fastest way to search what you're looking for !</p>
+<h1>Welcome to small ad</h1>
+<p>Small ad is a simple small ad search tool for buying and selling things.</p>
