Add password encryption to signup and add links to logo about and terms page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header id="main">
 	<div id="logo">
-		<%= image_tag("logo.png",:alt => "Small ad")%>
+		<%= link_to  image_tag("logo.png",:alt => "Small ad"), root_path %>
 	</div>
 </header>
