--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,10 +2,10 @@
 	<nav id="footer-nav">
 		<ul>
 			<li>
-				<%= link_to "About","#" %>
+				<%= link_to "About", about_path %>
 			</li>
 			<li>
-				<%= link_to "Terms","#" %>
+				<%= link_to "Terms", terms_path %>
 			</li>
 		</ul>
 	</nav>
