--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -64,7 +64,14 @@ ul li {
 	-moz-box-shadow: 0 0 5px #888;
 	-webkit-box-shadow: 0 0 5px#888;
 	box-shadow: 0 0 5px #888;
+	overflow:hidden;
 }
+
+#logo{
+	float: left;
+}
+
+/* global content */ 
 #global-content{
 	padding: 1em;
 	border-top: 1px dashed #666666;
@@ -76,6 +83,7 @@ ul li {
 #global-content p{
 	font-size: 0.9em;
 }
+
 /* SEARCH */
 #global-search .search-input {
 	width: 30em;
@@ -165,6 +173,36 @@ footer #credits{
 	color: #347454;
 }
 
+/* logged-user-menu */
+#logged-user-menu ul{
+	padding: 0;
+	margin: 0;
+	float: right;
+	margin-right: 1em;
+	margin-top: 1em;
+}
+
+#logged-user-menu li{
+	display: inline-block;
+	margin: 0 0.5em;
+}
+
+#logged-user-menu li a{
+	font-size: 1em;
+	background-color: #347454;
+	color: white;
+	padding: 0.3em;
+	border: 1px solid #666666;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	text-decoration: none;
+}
+
+#logged-user-menu li a:hover{
+	background-color: #65375D;
+}
+
+
 /* validations */
 #errors-box{
 	border: 1px dashed #666666;
@@ -193,10 +231,6 @@ footer #credits{
 #errors-box ul li{
 	padding: 0.4em 0;
 	font-size: 0.7em;
-}
-
-.field_with_errors{
-	
 }
 
 .field_with_errors input{
