--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Ads#index</h1>
-<p>Find me in app/views/ads/index.html.erb</p>
+<h1>My current ads</h1>
+
+<%= render "admin_menu" %>
+
+<% if @ads.any? %>
+	<table id="user-ads-list" class="admin-tab" border="1">
+		<tr>
+			<th>Preview</th>
+			<th>title</th>
+		</tr>
+		
+		<tr>
+			<%= render @ads %>
+		</tr>
+	</table>
+	<% else %>
+	<p>You don't have any ads for the moment. <%= link_to "Add one", new_ads_path %> !</p>	
+<% end %>
