--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,16 +1,16 @@
+<% if object.errors.any? %>
 <section id="errors-box">
-	<% if object.errors.any? %>
 	<header>
 		<h1>Be careful, you have <%= pluralize(object.errors.count,"error") %> :</h1>
 	</header>
-	
 	<section id="errors-list">
 		<ul>
-		<% object.errors.full_messages.each do |error| %>
-			<li><%= error %></li>		
-		<% end %>
+			<% object.errors.full_messages.each do |error| %>
+			<li>
+				<%= error %>
+			</li>
+			<% end %>
 		</ul>
 	</section>
-		
-	<% end %>	
 </section>
+<% end %> 
