--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -22,8 +22,14 @@ h1{
 
 /* generic styles */
 
+input, textarea{
+	background-color: #d6deda;
+}
+
 nav ul{
 	list-style: none;
+	padding: 0px;
+	margin: 0px;
 }
 
 nav ul li{
@@ -90,12 +96,13 @@ ul li {
 /* SEARCH */
 #global-search .search-input {
 	width: 30em;
-	border: 1px solid #347454;
+	border: 2px solid #65375D;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	font-weight: bold;
 	font-size: 1.2em;
 	padding: 0.3em;
+	background-color: #FFFFFF;
 }
 
 #global-search label {
@@ -103,17 +110,19 @@ ul li {
 }
 
 #global-search .submit{
+	position: relative;
+	bottom: 2px;
 	background-color: #65375D;
 	border: 1px solid #65375D;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	font-size: 1em;
-	color: white;
-	padding: 0.4em;	
+	color: #FFFFFF;
+	padding: 0.5em;	
 }
 
 #global-search #search_term{
-	width: 760px;
+	width: 755px;
 }
 
 /* footer */
@@ -138,8 +147,8 @@ footer #footer-nav a{
 }
 
 footer #credits{
-	background: #65375D;
-	color: white;
+	background: #CCCCCC;
+	color: #666666;
 	padding: 0.3em;
 	margin-bottom: 0.6em;
 	-moz-border-radius: 10px;
@@ -203,25 +212,13 @@ footer #credits{
 }
 
 #logged-user-menu li{
-	display: inline-block;
 	margin: 0 0.5em;
 }
 
 #logged-user-menu li a{
-	font-size: 1em;
-	background-color: #347454;
-	color: white;
-	padding: 0.3em;
-	border: 1px solid #666666;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	text-decoration: none;
+	font-size: 1.1em;
+	padding: 0.5em;
 }
-
-#logged-user-menu li a:hover{
-	background-color: #65375D;
-}
-
 
 /* validations */
 #errors-box{
@@ -261,3 +258,24 @@ footer #credits{
 	font-weight: bold;
 	font-size: 1em;
 }
+
+/* admin */
+
+#admin-menu{
+	height: 3em;
+}
+
+#admin-menu ul {
+	margin-left: -0.7em;
+	margin-top: 1em;	
+}
+
+#admin-menu li{
+	margin: 0 0.7em;
+}
+
+#admin-menu a{
+	font-size: 0.9em;
+	padding: 0.4em;
+}
+
