--- a/app/views/ads/_admin_menu.html.erb
+++ b/app/views/ads/_admin_menu.html.erb
@@ -1,6 +1,6 @@
 <nav id="admin-menu">
 	<ul>	
-		<li><%= link_to "Add a new small ad", new_ads_path, :class => "round_btn" %></li>
+		<li><%= link_to "Add a new small ad", new_ad_path, :class => "round_btn" %></li>
 	
 		<% if request.path != "/my-ads" %>
 		<li><%= link_to "Back to index page", my_ads_path, :class => "round_btn" %></li>
