--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -2,17 +2,19 @@
 
 <%= render "admin_menu" %>
 
+<%= render "shared/flash", :flash => flash %>
+
 <% if @ads.any? %>
-	<table id="user-ads-list" class="admin-tab" border="1">
+	<table id="user-ads-list" class="admin-tab">
 		<tr>
 			<th>Preview</th>
 			<th>title</th>
+			<th colspan = "2">Actions</th>
 		</tr>
 		
-		<tr>
-			<%= render @ads %>
-		</tr>
+		<%= render @ads %>
+		
 	</table>
 	<% else %>
-	<p>You don't have any ads for the moment. <%= link_to "Add one", new_ads_path %> !</p>	
+	<p>You don't have any ads for the moment. <%= link_to "Add one", ad_new_path %> !</p>	
 <% end %>
