--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title><%= title %></title>
   <%= stylesheet_link_tag "main",:media => "screen" %>
-  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js","application.js","jquery-rails.js",:cache => "jquery" %>
+  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "easy-counter.js" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
