--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Ads#edit</h1>
-<p>Find me in app/views/ads/edit.html.erb</p>
+<h1>Edit your small ad !</h1>
+
+<%= render "admin_menu" %>
+
+<%= render "form" %>
