--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,6 +15,11 @@ h1{
 	text-transform: uppercase;
 }
 
+img {
+	border: 0;
+	display: block;
+}
+
 #wrap{
 	width: 980px;
 	margin: 20px auto 0 auto;
@@ -45,6 +50,13 @@ ul li {
 	font-size: 1em;
 }
 
+textarea {
+	font-family: Verdana,sans-serif;
+}
+
+.clear {
+	clear: both;
+}
 
 /* btns */
 .round_btn{
@@ -59,7 +71,6 @@ ul li {
 .round_btn:hover{
 	background-color: #65375D;
 }
-
 
 /* header */
 #wrap header#main{
@@ -191,7 +202,7 @@ footer #credits{
 
 /* form fields */
 .field{
-	margin: 1em 0em;
+	margin: 0.6em 0em;
 }
 
 .field input{
@@ -200,6 +211,26 @@ footer #credits{
 
 .field label{
 	color: #347454;
+}
+
+.actions input[type="submit"]{
+	border: 1px solid #347454;
+	background-color: #347454;
+	color: #FFFFFF;
+	border-radius : 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	padding: 0.3em 1.5em;
+	margin: 1.2em 0em 0.5em 0;
+	font-weight: bold;
+}
+
+.actions input[type="submit"]:hover{
+	background-color: #65375D;
+	border: 1px solid #65375D;
+	box-shadow: 10px 10px 5px #888; 
+	-moz-box-shadow: 10px 10px 5px #888;
+	-webkit-box-shadow: 2px 2px 3px #888;
 }
 
 /* logged-user-menu */
@@ -294,4 +325,25 @@ footer #credits{
 .admin-tab th {
 	background-color: #65375D;
 	color: #FFFFFF;
+}
+
+.tip{
+	background: #CCCCCC url("/images/tip.png") no-repeat 5px 5px;
+	color: #000000;
+	padding: 1em 0.7em 1em 2.7em;
+	font-size: 0.8em;
+	border: 1px dashed #999999;
+	margin: 0.5em 0;
+	display: inline-block;
+}
+
+.tip p{
+	margin: 0;
+	padding: 0;
+}
+
+.pic-preview{
+	border: 1px dashed #999999;
+	width: 90px;
+	margin: 1em 0em 0.3em 0;
 }
