debugged ads index file (path name issue)

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -16,5 +16,5 @@
 		
 	</table>
 	<% else %>
-	<p>You don't have any ads for the moment. <%= link_to "Add one", ad_new_path %> !</p>	
+	<p>You don't have any ads for the moment. <%= link_to "Add one", new_ad_path %> !</p>	
 <% end %>
