--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,10 +1,25 @@
-<h1>Welcome to small ad</h1>
-
 <%= render "shared/flash", :flash => flash %>
 
 <% if !flash[:success].nil? && !signed_in? %>
 	<p>You can now <%= link_to "add some small ads","#" %> !</p>
 <% end %>
+
+<section id="intro">
+	<header>
+		<h1>Welcome to small ad</h1>
+	</header>
+	<p>Small ad is a simple small ad search tool for buying and selling things.</p>
+	<% if(!signed_in?) %>
+		<section id="signup_box">
+		<p>If your are not member again... why don't you sign up ? It's <strong>free</strong> !</p>
+		<div id="signup_btn"><%= link_to "Go sign up !",signup_path, :class => "round_btn" %></div>
+		<p>Already signed up ? </p>
+		<div id="signin_btn"><%= link_to "Sign in !",signin_path, :class => "round_btn" %></div>
+	</section>
+	<% else %>
+		<p>Hello <strong><%= current_user.firstname %> <%= current_user.lastname%> !</strong> You are connected !</p>
+	<% end %>
+</section>
 
 <section id="last-ads">
 	<header>
@@ -18,20 +33,4 @@
 		<p>No ads to display yet</p>
 	<% end %>
 </section>
-
-<% if(!signed_in?) %>
-<section id="intro">
-	<p>Small ad is a simple small ad search tool for buying and selling things.</p>
-</section>
-
-<section id="signup_box">
-	<p>If your are not member again... why don't you sign up ? It's <strong>free</strong> !</p>
-	<div id="signup_btn"><%= link_to "Go sign up !",signup_path, :class => "round_btn" %></div>
-	<p>Already signed up ? </p>
-	<div id="signin_btn"><%= link_to "Sign in !",signin_path, :class => "round_btn" %></div>
-</section>
-<% else %>
-	<p>Hello <strong><%= current_user.firstname %> <%= current_user.lastname%> !</strong> You are connected !</p>
-<% end %>
-
 
