--- a/app/views/pages/_last_ads.html.erb
+++ b/app/views/pages/_last_ads.html.erb
@@ -1,6 +1,6 @@
 <li>
 	<span class="img"><%= show_ad_img(last_ads,:thumb) %></span>
 		<%= last_ads.title %> -
-		<%= number_to_currency(last_ads.price, :unit => "&euro;", :locale => :fr,:format => "%n %u") %>
-		<%= link_to "take a look","#" %>
+		<%= format_price(last_ads.price) %>
+		<%= link_to "See details", ad_path(last_ads) %>
 </li>
