--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,5 +1,5 @@
 <div id="global-search">
-	<%= form_tag do %>
+	<%= form_tag("/ads/search", :method => :get) do %>
 	<p>
 		<%= label_tag :search_term,"I'm looking for :" %> <%= text_field_tag :search_term, nil, :size => 40, :class => "search-input" %>
 		<%= submit_tag "Search !",:class => "submit"%>
