--- a/app/views/contact_mailer/send_to_seller.html.erb
+++ b/app/views/contact_mailer/send_to_seller.html.erb
@@ -1,7 +1,7 @@
 <p>Dear <%= @seller.firstname %> <%= @seller.lastname %>, </p>
 
 <p>
-	The user <%= @from_firstname %> <%= @from_lastname %> seems to be interested by your ad
+	<%= @from_firstname %> <%= @from_lastname %> seems interested by your ad
 	<%= link_to  @ad_title, ad_url(@ad_id,:host => "smallad.com") %>
 </p>
 
