--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,5 @@
 <%= render "shared/flash", :flash => flash %>
 
-<% if !flash[:success].nil? && !signed_in? %>
-	<p>You can now <%= link_to "add some small ads","#" %> !</p>
-<% end %>
-
 <section id="intro">
 	<header>
 		<h1>Welcome to small ad</h1>
@@ -18,6 +14,11 @@
 	</section>
 	<% else %>
 		<p>Hello <strong><%= current_user.firstname %> <%= current_user.lastname%> !</strong> You are connected !</p>
+		
+		<% if !flash[:success].nil? %>
+			<p>You can now <%= link_to "add some small ads", new_ad_path %> !</p>
+		<% end %>
+
 	<% end %>
 </section>
 
